Fix wrapping in feed posts

--- a/css/com/feed/post.css
+++ b/css/com/feed/post.css
@@ -43,7 +43,7 @@ a:hover {
 }
 
 .body {
-  white-space: pre;
+  white-space: pre-wrap;
   font-size: 14px;
   color: var(--color-text--dark);
 }
